<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.WelcomeActivity"
    android:background="#1479FF">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/need"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMedical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/medical_help"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvNeed"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/let_s_start_discuss_with_us"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvMedical"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/ic_back_loginstart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btnCreateAccount"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:text="@string/create_an_account"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="26dp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:background="@drawable/button_background"
    android:layout_marginEnd="16dp"
    app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="#1D3A62"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>