<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_40"
            android:background="@drawable/ic_success_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tvKeyImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_marginBottom="@dimen/dp_280"
            android:src="@drawable/ic_logout_success"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogoutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvKeyImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogoutText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginStart="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_70"
            android:background="@drawable/button_background"
            android:text="@string/logout"
            android:onClick="setLogout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAlert" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginStart="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_70"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:onClick="setCancel"
            android:textAllCaps="false"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogOut" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>