<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_bg"
        tools:context=".login.OtpVerificationActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_6"
            android:outlineSpotShadowColor="#073673"
            android:padding="@dimen/dp_26"
            android:visibility="visible"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_6"
            app:cardElevation="@dimen/dp_10"
            app:cardMaxElevation="@dimen/dp_12"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView

                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_6"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_28"
            android:text="@string/verify_otp"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/sp_26"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_28"
            android:text="@string/otp_text_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVerify" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_28"
            android:text="@string/otp_text_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/responseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2"
            tools:text="@string/add_new_family_member" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardVerifyOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_56"
            android:layout_marginEnd="@dimen/dp_16"
            android:padding="@dimen/dp_16"
            app:cardCornerRadius="@dimen/dp_6"
            app:cardElevation="@dimen/dp_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvVerifyOtp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_8"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtVerifyOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:hint="@string/your_otp"
                    android:inputType="none"
                    android:maxLines="1"
                    android:paddingStart="@dimen/dp_8"
                    android:textColor="@color/primary_color"
                    android:textColorHint="@color/primary_color"
                    android:textSize="@dimen/sp_16"
                    app:hintTextColor="@color/primary_color" />
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="@dimen/dp_40"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/primaryTextColor"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>